# unmarket

./: .gitignore  ARCHITECTURE.md  PLATFORMS.md  PRODUCT_DESIGN.md  README.md  mcp.json  package-lock.json  package.json  tsconfig.json  使用手册.md
.solomd/: session.cdad3d78-e508-44a4-a7f4-9f2d1793a0e8.json
docs/: .gitignore  RULES.md  multi-account-architecture.md  unzoo-api-reference.md  unzoo-gap-analysis.md  优化点.md
docs/superpowers/plans/: 2026-06-10-platform-scene-region-provision-selector.md
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/browser/: unzoo-client.ts
src/cli/: account.ts  ai.ts  analyze.ts  browser.ts  config.ts  gmail.ts  main.ts  product.ts  publish.ts  queue.ts  register.ts  run.ts  stats.ts
src/core/: account-registrar.ts  ai-engine.ts  analytics.ts  content-generator.ts  crawler.ts  init.ts  multi-scheduler.ts  product-manager.ts  publisher.ts  queue.ts
src/mcp/: server.ts
src/storage/: accounts.ts  config.ts  database.ts
src/tauri-frontend/: app.ts
src/utils/: crypto.ts  logger.ts
