[package]
name = "unmarket"
version = "0.1.0"
description = "Global marketing automation tool"
authors = ["UnzooAI"]
license = "MIT"
repository = "https://github.com/unzooai/unmarket"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "unmarket_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
open = "5"
urlencoding = "2"
futures = "0.3"
